# shapefile-vtk

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  PORTFOLIO.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: USAGE.md
src/: LICENSE.txt  gui.py  shapeToVTK.py  version.py
src/examples/: points.py
src/files/: dbf.py  prj.py  shp.py
src/shapes/: shape.py
